Bug 435017 - Changing look and feel theme on quick settings page does not work
Summary: Changing look and feel theme on quick settings page does not work
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-27 14:03 UTC by Kai Uwe Broulik
Modified: 2021-03-31 10:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2021-03-27 14:03:55 UTC
SUMMARY
Trying to change look and feel theme from "quick settings" does not work and instead gives me an error:

Failed to register via dbus. Another instance is running
Unable to find the theme named org.kde.breezedark.desktop/

STEPS TO REPRODUCE
1. Open System Settings
2. Click "Dark theme"
3. Apply

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Lights out

SOFTWARE/OS VERSIONS
KDE Plasma Version: Git master as of 24 March
Comment 1 Nate Graham 2021-03-27 14:04:48 UTC
Can confirm. This worked the last time I tested it during the review; must have broken at a later stage.

Marco, can you have a look?
Comment 2 Alex 2021-03-31 08:59:37 UTC
When running systemsettings5 from Konsole, the output when attempting to switch to the dark theme is:

Unable to find the theme named org.kde.breezedark.desktop/

And the light theme:

Unable to find the theme named org.kde.breeze.desktop/

So hopefully this is a pretty easy fix.
Comment 3 Alex 2021-03-31 09:11:00 UTC
(In reply to Alex from comment #2)
> When running systemsettings5 from Konsole, the output when attempting to
> switch to the dark theme is:
> 
> Unable to find the theme named org.kde.breezedark.desktop/
> 
> And the light theme:
> 
> Unable to find the theme named org.kde.breeze.desktop/
> 
> So hopefully this is a pretty easy fix.

I just realised OP already listed this terminal output... Disregard my comment lol
Comment 4 Bug Janitor Service 2021-03-31 10:22:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/758
Comment 5 Marco Martin 2021-03-31 10:30:38 UTC
Git commit ec6f5b475b6b865c6259ca91b5bac711a2a38f0a by Marco Martin.
Committed on 31/03/2021 at 10:21.
Pushed by mart into branch 'master'.

add trailing shash only in case of absolute path

kpackage wants just the name if a plugin name is passed, when passing the absolute
path of a fodler, it wants the trailing slash

M  +4    -4    kcms/lookandfeel/lnftool.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ec6f5b475b6b865c6259ca91b5bac711a2a38f0a