add trailing shash only in case of absolute path

kpackage wants just the name if a plugin name is passed, when passing the absolute
path of a fodler, it wants the trailing slash

BUG:435017